Fixa till dark mode, Så det funkar på hela headern inc logo, body, ändra position på dark-mode knappen och förfina den.

--- a/JensensWebApp/Views/Shared/_Layout.cshtml.css
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml.css
@@ -60,3 +60,7 @@ for details on configuring this project to bundle and minify static web assets. 
     margin-top:20px;
 }
 
+#darkmodebtn
+{
+    background-color:black;
+}
